tests/ui/endpoint/non_custom_method_attribute.stderr
error: `method` can only be used on custom endpoints
 --> tests/ui/endpoint/non_custom_method_attribute.rs:8:12
  |
8 | #[read_all(method = "gotham_restful::gotham::hyper::Method::GET")]
  |            ^^^^^^
